--- a/app/src/main/res/layout/activity_change_pass.xml
+++ b/app/src/main/res/layout/activity_change_pass.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@color/window_background"
-    tools:context="me.bhavyanshu.unidb.ForgotPassActivity">
+    tools:context=".ForgotPassActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
